# decl-worker-api

./: .gitignore  AGENTS.md  CHEATSHEET.md  MIGRATION-PLAN.md  Makefile  PLAN-EXTENDED-TASKS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.claude/: CLAUDE.md
backends/modal/: app.py  requirements.txt
backends/ray/: cluster.yaml  requirements.txt  serve.py
docs/: ARCHITECTURE.md  DECISIONS.md
examples/: basic.ts
schemas/: chat.schema.json  media.schema.json
scripts/: check_types.py  gen_from_schema.py  gen_schemas.py  gen_types.py
shared/: worker.py
shared/schemas/: __init__.py  chat.py  common.py  media.py
shared/tasks/: __init__.py  decorator.py  discovery.py  types.py
shared/tasks/audio/: convert.py  diarize.py  transcribe.py  tts.py
shared/tasks/data/: fetch.py  rss.py  search.py
shared/tasks/find/: __init__.py  semantic.py
shared/tasks/get/: __init__.py  download.py  rss.py
shared/tasks/hear/: __init__.py  whisper.py
shared/tasks/image/: detect.py
shared/tasks/see/: __init__.py  yolo.py
shared/tasks/speak/: __init__.py  chatterbox.py  elevenlabs.py  openai_tts.py
shared/tasks/text/: llm.py
shared/tasks/think/: __init__.py  openai.py  qwen.py
shared/tasks/transform/: __init__.py  chunk.py
shared/tasks/video/: convert.py  extract.py  scenes.py
shared/tasks/watch/: __init__.py  analyze.py  scenes.py
tests/component/: effects-integration.test.ts  parallel-pipeline.test.ts  pipelines.test.ts  task-execution.test.ts
tests/e2e/: effects-integration.test.ts  mock-backend.ts  parallel-pipeline.test.ts  pipelines.test.ts  task-execution.test.ts
